2 of 4 stages completed

--- a/Amazing Prices/task/src/index.html
+++ b/Amazing Prices/task/src/index.html
@@ -2,36 +2,77 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Amazing Prises</title>
+    <title>Amazing Prices</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
 </head>
 <body>
-<div class="wrapper">
-    <header class="header">
-        <a id="nav-brand" class="product_anchor" href="/">Amazing Product</a>
-        <nav class="nav">
-            <a href="#Features">Features</a>
-            <a href="#Enterprise">Enterprise</a>
-            <a href="#Support">Support</a>
-            <a href="#Pricing">Pricing</a>
-        </nav>
-    </header>
-    <main class="main">
-    </main>
-    <footer class="footer">
-        <div class="product_anchor">
-            <a href="#AmazingProduct">Amazing Product</a>
+<header>
+    <a id="nav-brand" class="anchor">Amazing Product</a>
+    <nav>
+        <a class="anchor">Features</a>
+        <a class="anchor">Enterprise</a>
+        <a class="anchor">Pricing</a>
+        <a class="anchor">Support</a>
+    </nav>
+</header> <!-- End of header -->
+<main>
+    <section>
+        <h1>Amazing Prices</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat.</p>
+    </section>
+    <section>
+        <div class="card">
+            <div class="card-header">
+                <h4>Free</h4>
+            </div>
+            <div class="card-body">
+                <h3>$0/mo</h3>
+                <p>10 users included</p>
+                <p>2 GB of storage</p>
+                <p>Email support</p>
+                <p>Help center access</p>
+                <button>Sign up for free</button>
+            </div>
         </div>
-        <div class="nav_footer">
-            <a href="#Features">Features</a>
-            <a href="#Enterprise">Enterprise</a>
-            <a href="#Support">Support</a>
-            <a href="#Pricing">Pricing</a>
+        <div class="card">
+            <div class="card-header">
+                <h4>Pro</h4>
+            </div>
+            <div class="card-body">
+                <h3>$15/mo</h3>
+                <p>20 users included</p>
+                <p>5 GB of storage</p>
+                <p>Email support</p>
+                <p>Help center access</p>
+                <button>Get started</button>
+            </div>
         </div>
-    </footer>
-</div>
+        <div class="card">
+            <div class="card-header">
+                <h4>Premium</h4>
+            </div>
+            <div class="card-body">
+                <h3>$29/mo</h3>
+                <p>30 users included</p>
+                <p>10 GB of storage</p>
+                <p>Email support</p>
+                <p>Help center access</p>
+                <button>Get started</button>
+            </div>
+        </div>
+    </section>
+</main> <!-- End of main -->
+<footer>
+    <a class="anchor">Amazing Product</a>
+    <a class="anchor">Features</a>
+    <a class="anchor">Enterprise</a>
+    <a class="anchor">Support</a>
+    <a class="anchor">Pricing</a>
+</footer> <!-- End of footer -->
 </body>
 </html>
