--- a/Amazing Prices/task/src/index.html
+++ b/Amazing Prices/task/src/index.html
@@ -2,11 +2,9 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Amazing Prices</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@500;700&display=swap" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <header>
@@ -17,15 +15,15 @@
         <a class="anchor">Pricing</a>
         <a class="anchor">Support</a>
     </nav>
-</header> <!-- End of header -->
+</header>
 <main>
-    <section>
+    <section id="intro">
         <h1>Amazing Prices</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
             et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
             ex ea commodo consequat.</p>
     </section>
-    <section>
+    <section id="price-plans">
         <div class="card">
             <div class="card-header">
                 <h4>Free</h4>
@@ -66,13 +64,58 @@
             </div>
         </div>
     </section>
-</main> <!-- End of main -->
+    <section id="comparison">
+        <h2>Compare Plans</h2>
+        <table>
+            <thead>
+            <tr>
+                <th></th>
+                <th>Free</th>
+                <th>Pro</th>
+                <th>Enterprise</th>
+            </tr>
+            </thead>
+            <tbody>
+            <tr>
+                <th>Public</th>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Private</th>
+                <td></td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Permissions</th>
+                <td>X</td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Sharing</th>
+                <td></td>
+                <td>X</td>
+                <td>X</td>
+            </tr>
+            <tr>
+                <th>Unlimited members</th>
+                <td></td>
+                <td></td>
+                <td>X</td>
+            </tr>
+            </tbody>
+        </table>
+    </section>
+</main>
 <footer>
     <a class="anchor">Amazing Product</a>
     <a class="anchor">Features</a>
     <a class="anchor">Enterprise</a>
     <a class="anchor">Support</a>
     <a class="anchor">Pricing</a>
-</footer> <!-- End of footer -->
+</footer>
 </body>
 </html>
